--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,23 @@ h1 {
   margin: 50px auto;
   background-color: aquamarine;
   flex-wrap: wrap;
+  border: 1px solid black;
 }
 
 .innerDiv {
-  width: 60px;
   border: 1px solid black;
+  background-color: aliceblue;
 }
 
 .active {
   background-color: red;
+}
+
+.form {
+  text-align: center;
+  margin-top: 25px;
+}
+
+input {
+  margin: 5px;
 }
