--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,12 @@ h6 {
   isolation: isolate;
 }
 
+body {
+  background-color: antiquewhite;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 h1 {
   text-align: center;
   margin-top: 25px;
@@ -48,9 +54,8 @@ h1 {
   width: 960px;
   height: 960px;
   margin: 50px auto;
-  background-color: aquamarine;
   flex-wrap: wrap;
-  border: 1px solid black;
+  padding: 0;
 }
 
 .innerDiv {
@@ -69,4 +74,6 @@ h1 {
 
 input {
   margin: 5px;
+  width: 50px;
+  border-radius: 5px;
 }
